<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/spacing_xlarge"
                android:paddingBottom="?attr/actionBarSize"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cal"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus"

                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    app:fontFamily="sans-serif-light" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="3dp"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:background="@color/colorPrimary" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutuss"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/bellerose"
                    android:textColor="#000" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/our"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ourr"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="@font/bellerose"
                        android:textColor="#000" />

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vis"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/viss"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="@font/bellerose"
                        android:textColor="#000" />

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dec 2020"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </LinearLayout>



                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />



            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>