<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"

    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:text="@string/title_Setting"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_middle">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="60dp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">


                    <TextView
                        android:id="@+id/lang"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Select"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/white"
                        android:textStyle="normal" />



                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="wrap_content" />

                </LinearLayout>



                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="wrap_content" />



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_middle">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"

                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    >



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_middle"

                        android:layout_marginStart="@dimen/spacing_large"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:text="@string/More"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="@dimen/spacing_large" />

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">


                    <TextView
                        android:id="@+id/ask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ask"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="wrap_content" />


                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_middle">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_colors" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_colors" />



                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey_10" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
